--- a/index.html
+++ b/index.html
@@ -1,100 +1,97 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="src/style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300..700;1,300..700&family=Kings&family=Oswald:wght@200&display=swap" rel="stylesheet">
-
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Sur Mesure</title>
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,500;0,700;1,600&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="src/style.css">
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-white position-absolute w-100">
-            <div class="container">
+<header>
+  <div class="logo">Sur <span>Mesure</span></div>
+  <nav>
+    <a href="#">Início</a>
+    <a href="#">Quem Somos</a>
+    <a href="#">Criar Peça</a>
+    <a href="#">Contato</a>
+  </nav>
+</header>
 
-                <p class="navbar-brand fw-bold mb-0 d-flex align-items-center" id="titulo">
-                    SUR MESURE
-                </p>
+<section class="hero">
+  <div class="hero-content">
+    <small>ALTA COSTURA PERSONALIZADA</small>
+    <h1>Sur <span>Mesure</span></h1>
+    <p>Você cria, nós confeccionamos. Peças únicas feitas sob medida para expressar sua <span>personalidade</span>.</p>
+    <div class="actions">
+      <a class="btn" href="#">Crie Sua Peça</a>
+      <a class="btn-historia" href="#">Nossa História</a>
+    </div>
+    <div class="stats">
+      <div class="stat"><span>500+</span><p>Peças Criadas</p></div>
+      <div class="stat"><span>100%</span><p>Personalizado</p></div>
+      <div class="stat"><span>50+</span><p>Tecidos Premium</p></div>
+      <div class="stat"><span>5</span><p>Anos de Tradição</p></div>
+    </div>
+  </div>
+</section>
 
+<section>
+  <div class="about">
+    <div class="about-img">
+      <div class="about-badge"><strong>10+</strong><br>Anos de Alfaiataria</div>
+    </div>
+    <div class="about-text">
+      <small>QUEM SOMOS</small>
+      <h2>Nossa <span>História</span></h2>
+      <p>Nossa empresa Sur Mesure foi criada em 2026 por 4 estudantes , ela começou por meio de uma estudante que gostaca de moda , ela percebeu que o meracdo de moda brasileiro estava escasso no sentido de não ter muitas roupas variadas que cativassem o cliente. 
+        Ela chamou masi 3 estudantes com a visão de ampliar esta ideia , após uma reunião nós decidimos criar uma empresa onde o cliente cria sua propria roupa , escolhendo tecido , cor , peça , etc. 
+        Hoje nossa ideia deu muito certo , nós temos uma empresa se consolidando no mercado , com muitas vendas e clientes . No futuro nós desejamos ter uma loja fisíca e participar de eventos. 
+      </p>
+      <p>Cada peça carrega o DNA de quem a imaginou.</p>
+    </div>
+  </div>
+</section>
 
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menuNav">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
+<section class="diff">
+  <small>POR QUE SUR MESURE</small>
+  <h2>Nossos <span>Diferenciais</span></h2>
+  <div class="diff-grid">
+    <div class="diff-card"><span>01</span><h3>Personalização Total</h3><p>Você escolhe cada detalhe.</p></div>
+    <div class="diff-card"><span>02</span><h3>Tecidos Importados</h3><p>Itália, França e Portugal.</p></div>
+    <div class="diff-card"><span>03</span><h3>Artesãos</h3><p>Mestres alfaiates especializados.</p></div>
+    <div class="diff-card"><span>04</span><h3>Ajustes Perfeitos</h3><p>Provas até o encaixe ideal.</p></div>
+  </div>
+</section>
 
-                <div class="collapse navbar-collapse justify-content-end" id="menuNav">
-                    <ul class="navbar-nav gap-3">
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">QUEM SOMOS NÓS</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">CAMISAS</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">CAMISAS</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">JAQUETAS E BLUSAS</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">CONTATO</a>
-                        </li>
-                    </ul>
-                </div>
+<section class="create">
+  <small>NOSSO DIFERENCIAL</small>
+  <h2>Crie Sua <span>Própria Roupa</span></h2>
+  <p>Escolha cada detalhe da sua peça.</p>
 
-            </div>
-        </nav>
+  <div class="create-layout">
+    <div class="steps">
+      <button class="active">01 Peça</button>
+      <button>02 Tecido</button>
+      <button>03 Cor</button>
+      <button>04 Detalhes</button>
+    </div>
 
+    <div class="items">
+      <div class="item">Camisa</div>
+      <div class="item">Calça</div>
+      <div class="item">Blazer</div>
+      <div class="item">Vestido</div>
+      <div class="item">Saia</div>
+      <div class="item">Colete</div>
+    </div>
 
-        <div id="carouselExample" class="carousel slide">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                <img src="img/pexels-cottonbro-6069090.jpg" class="d-block w-100" alt="...">
-                </div>
-                <div class="carousel-item">
-                <img src="img/ChatGPT Image 27 de jan. de 2026, 10_51_22.png" class="d-block w-100" alt="...">
-                </div>
-                <div class="carousel-item">
-                <img src="img/pexels-hamza01nsr-11217479.jpg" class="d-block w-100" alt="...">
-                </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
-        </div>
-    </header>
+    <div class="selection">
+      <img src="https://images.unsplash.com/photo-1503341455253-b2e723bb3dbb?auto=format&fit=crop&w=600&q=80">
+      <p>Sua Seleção</p>
+    </div>
+  </div>
+</section>
 
-    <section class="quem-somos">
-        <div class="container">
-            <div class="linha-dourada"></div>
-
-            <h2 class="titulo-quem-somos">Quem Somos</h2>
-
-            <p class="texto-quem-somos">
-                A <strong>SUR MESURE</strong> é uma marca que nasce da alfaiataria contemporânea,
-                onde cada detalhe é pensado com precisão, elegância e propósito.
-            </p>
-
-            <p class="texto-quem-somos">
-                Criamos peças atemporais, unindo tradição e modernidade,
-                para quem entende que estilo é uma forma de expressão silenciosa.
-            </p>
-        </div>
-    </section>
-
-
-
-
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
