--- a/index.html
+++ b/index.html
@@ -11,33 +11,31 @@
 <header>
   <div class="logo">Sur <span>Mesure</span></div>
   <nav>
-    <a href="#">Início</a>
-    <a href="#">Quem Somos</a>
-    <a href="#">Criar Peça</a>
+    <a href="#hero">Início</a>
+    <a href="#about">Quem Somos</a>
+    <a href="#create">Criar Peça</a>
     <a href="#">Contato</a>
   </nav>
 </header>
 
-<section class="hero">
+<section class="hero" id="hero">
   <div class="hero-content">
     <small>ALTA COSTURA PERSONALIZADA</small>
     <h1>Sur <span>Mesure</span></h1>
     <p>Você cria, nós confeccionamos. Peças únicas feitas sob medida para expressar sua <span>personalidade</span>.</p>
     <div class="actions">
-      <a class="btn" href="#">Crie Sua Peça</a>
-      <a class="btn-historia" href="#">Nossa História</a>
+      <a class="btn" href="#create">Crie Sua Peça</a>
+      <a class="btn-historia" href="#about">Nossa História</a>
     </div>
     <div class="stats">
       <div class="stat"><span>500+</span><p>Peças Criadas</p></div>
       <div class="stat"><span>100%</span><p>Personalizado</p></div>
       <div class="stat"><span>50+</span><p>Tecidos Premium</p></div>
-      <div class="stat"><span>5</span><p>Anos de Tradição</p></div>
-    </div>
   </div>
 </section>
 
 <section>
-  <div class="about">
+  <div class="about" id="about">
     <div class="about-img">
       <div class="about-badge"><strong>10+</strong><br>Anos de Alfaiataria</div>
     </div>
@@ -64,7 +62,7 @@
   </div>
 </section>
 
-<section class="create">
+<section id="create" class="create">
   <small>NOSSO DIFERENCIAL</small>
   <h2>Crie Sua <span>Própria Roupa</span></h2>
   <p>Escolha cada detalhe da sua peça.</p>
@@ -85,13 +83,12 @@
       <div class="item">Saia</div>
       <div class="item">Colete</div>
     </div>
-
-    <div class="selection">
-      <img src="https://images.unsplash.com/photo-1503341455253-b2e723bb3dbb?auto=format&fit=crop&w=600&q=80">
-      <p>Sua Seleção</p>
-    </div>
   </div>
 </section>
+
+<footer>
+
+</footer>
 
 </body>
 </html>
