feat- Add Funcionalidade de escolher a roupa

--- a/index.html
+++ b/index.html
@@ -84,11 +84,21 @@
       <div class="item">Colete</div>
     </div>
   </div>
+
+  <div class="selection">
+    <h3>Preview</h3>
+    <div class="preview-box">
+        <div id="preview-roupa" class="preview-roupa"></div>
+    </div>
+  </div>
+
 </section>
 
 <footer>
 
 </footer>
+
+<script src="src/script.js"></script>
 
 </body>
 </html>
