commit para add um novo estilo

--- a/index.html
+++ b/index.html
@@ -86,10 +86,11 @@
   </div>
 
   <div class="selection">
-    <h3>Preview</h3>
-    <div class="preview-box">
-        <div id="preview-roupa" class="preview-roupa"></div>
-    </div>
+      <h3>Preview</h3>
+      <div class="preview-container">
+          <img id="preview-base" src="img/camisa.png" alt="Roupa">
+          <div id="color-overlay"></div>
+      </div>
   </div>
 
 </section>
