troca de design

--- a/index.html
+++ b/index.html
@@ -9,30 +9,36 @@
 </head>
 <body>
 <header>
-  <div class="logo">Sur <span>Mesure</span></div>
-  <nav>
-    <a href="#hero">Início</a>
-    <a href="#about">Quem Somos</a>
-    <a href="#create">Criar Peça</a>
-    <a href="#">Contato</a>
-  </nav>
+  <div class="div-header">
+    <div class="logo">Sur <span>Mesure</span></div>
+    <nav>
+      <a href="#hero">Início</a>
+      <a href="#about">Quem Somos</a>
+      <a href="#create">Criar Peça</a>
+      <a href="#">Contato</a>
+    </nav>
+  </div>
 </header>
 
 <section class="hero" id="hero">
-  <div class="hero-content">
+
+  <div class="hero-left">
     <small>ALTA COSTURA PERSONALIZADA</small>
     <h1>Sur <span>Mesure</span></h1>
-    <p>Você cria, nós confeccionamos. Peças únicas feitas sob medida para expressar sua <span>personalidade</span>.</p>
-    <div class="actions">
-      <a class="btn" href="#create">Crie Sua Peça</a>
-      <a class="btn-historia" href="#about">Nossa História</a>
-    </div>
+
     <div class="stats">
       <div class="stat"><span>500+</span><p>Peças Criadas</p></div>
       <div class="stat"><span>100%</span><p>Personalizado</p></div>
       <div class="stat"><span>50+</span><p>Tecidos Premium</p></div>
+    </div>
   </div>
+
+  <div class="hero-right">
+    <div class="img-hero"></div>
+  </div>
+
 </section>
+
 
 <section>
   <div class="about" id="about">
@@ -88,9 +94,11 @@
   <div class="selection">
       <h3>Preview</h3>
       <div class="preview-container">
-          <img id="preview-base" src="img/camisa.png" alt="Roupa">
-          <div id="color-overlay"></div>
+          <div class="preview-image">
+              <img id="preview-base" src="img/camisa.png" alt="Roupa">
+          </div>
       </div>
+
   </div>
 
 </section>
