--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <a href="#hero">Início</a>
       <a href="#about">Quem Somos</a>
       <a href="#create">Criar Peça</a>
-      <a href="#">Contato</a>
+      <a href="#footer">Contato</a>
     </nav>
   </div>
 </header>
@@ -101,8 +101,29 @@
 
 </section>
 
-<footer>
-    
+<footer class="footer" id="footer">
+  <div class="footer-container">
+
+    <div class="footer-brand">
+      <h3>Sur <span>Mesure</span></h3>
+      <p>Alta Costura Personalizada</p>
+    </div>
+
+    <div class="footer-social">
+      <a href="#" target="_blank" class="social-btn instagram">
+        Instagram
+      </a>
+      <a href="#" target="_blank" class="social-btn whatsapp">
+        WhatsApp
+      </a>
+    </div>
+
+    <div class="footer-info">
+      <p>CNPJ: 12.345.678/0001-90</p>
+      <p>© 2026 Sur Mesure. Todos os direitos reservados.</p>
+    </div>
+
+  </div>
 </footer>
 
 <script src="src/script.js"></script>
