add novas funcionalidades

--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="theme-color" content="#0b0b0b">
+<link rel="icon" type="image/png" href="img/favicon.png">
+<link rel="apple-touch-icon" href="img/favicon.png">
 <title>Sur Mesure</title>
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,500;0,700;1,600&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 <link rel="stylesheet" href="src/style.css">
 </head>
 <body>
@@ -155,13 +158,13 @@
       <a href="#" target="_blank" class="social-btn instagram">
         Instagram
       </a>
-      <a href="#" target="_blank" class="social-btn whatsapp">
+      <a href="https://wa.me/5535997397827?text=Olá,%20gostaria%20de%20fazer%20uma%20peça%20personalizada" target="_blank" class="social-btn whatsapp">
         WhatsApp
       </a>
     </div>
 
     <div class="footer-info">
-      <p>CNPJ: 12.345.678/0001-90</p>
+      <p>CNPJ:  24.444.666/0001-12</p>
       <p>© 2026 Sur Mesure. Todos os direitos reservados.</p>
     </div>
 
@@ -177,6 +180,12 @@
 </footer>
 
 <script src="src/script.js"></script>
+<a href="https://wa.me/5535997397827?text=Olá,%20gostaria%20de%20fazer%20uma%20peça%20personalizada"
+   class="whatsapp-float"
+   target="_blank">
 
+   <i class="fa-brands fa-whatsapp"></i>
+
+</a>
 </body>
 </html>
